--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 /*
 	------------------------- 
-		Password Generate 
+		Password Generator 
 	Create by: Andrick Santos 
 https://andricksantos.github.io/ 
 	------------------------- 
@@ -50,7 +50,7 @@ a:hover {
 }
 /* Logotipo */
 .logo { 
-	margin-bottom: 40px;
+	margin-bottom: 30px;
 	width: 100%;
 	text-align: center;
 }
@@ -62,7 +62,7 @@ a:hover {
 
 /* Estilos de Filas y Columnas */
 .app .fila {
-	margin-bottom: 40px;
+	margin-bottom: 29px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -131,7 +131,7 @@ a:hover {
 	
 /* Fila: Generar Contraseña */
 .app .fila.generar {
-	margin-bottom: 10px;
+	margin-bottom: 1px;
 }
 
 .app .fila.generar .col:nth-child(1){
@@ -267,4 +267,20 @@ a:hover {
 
 .creditos p, a {
 	font-size: 14px;
+}
+.textos{
+	color: #fff;
+	font-family: 'Montserrat', sans-serif;
+}
+
+label{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 18px;
+	
+}
+a{
+	font-family: 'Montserrat', sans-serif;
+	text-decoration: none;
+	color: #684BFF;
+
 }
